-update surface blit for rect arg.
-add sprite group alias.
-revise surface setpixel.
-revise color arg processing.
-refactor sprite collide methods.
-revise imageloader processing.
-revise sprite groupcollide for dict obj key.
-add sprite layeredupdates.
-add cursors get_cursor_types.
-add canvas contextmenu handler.
-revise mouseevent positioning.
-add mouse wheel event.
-add vector object.

0.24    2021-04-28
-revise rect move/inflate args processing.
-revise rect attributes.
-revise ndarray shape for inheritance.
-add env check.
-revise quit method to stop mixer.
-revise quit method to stop timers.
-update time set_timer for event argument.
-revise app to use webkit2.
-update for python 2/3 compatibility.

0.23    2021-04-06
-update event handling.
-update surface get_at to return color object.
-refactor surface colorkey methods.
-revise sprite blit process.
-update mask for optimization.
-update ndarray and bitset for optimization.
-update time wait to properly delay callback.
-revise requestanimationframe shim.
-update clock with performance time.
-update clock tick with performance time.
-update asynchronous loop process to optimize.
-update for python 2/3 compatibility.

0.22    2019-04-06
-add display set_callback method.
-update Canvas handling of callback change.
-add time set_timer method.
-update sprite to revise member groups.
-update sprite argument handling.
-update sprite collide_mask to use mask.overlap.
-refactor rect for optimization.
-update display setup to accept callback function or object with run method.
-update rect to define __slots__.
-add mouse set_cursor and get_cursor methods.
-add surface toDataURL method.
-update mouse set_cursor to use custom image.
-update surface set_at to optimize.
-update mouse set_cursor to use cursor data.
-update transform rotozoom to optimize.
-update display update method (_update) to optimize.
-update surface blit method (_blit_clear) to optimize.