@@ -15,6 +15,7 @@
 -revise mouseevent positioning.
 -add mouse wheel event.
 -add vector object.
+-revise mixer processing.
 
 0.24    2021-04-28
 -revise rect move/inflate args processing.
